# blazecor

./: .editorconfig  .gitignore  .prettierrc.ts  Cargo.toml  components.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.storybook/: preview.ts
src/: Api.ts  App.css  App.tsx  declare.d.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/custom/: ColorPalette.stories.ts  ColorPicker.stories.ts  LayerSelector.stories.ts  LayerSelector.tsx  color-palette.stories.ts  color-palette.tsx  color-picker.stories.ts  color-picker.stories.tsx  color-picker.tsx  colorPalette.tsx  colorPicker.tsx  container.tsx  device-selector.tsx  device-settings.tsx  layer-selector.stories.ts  layer-selector.tsx  loading.tsx
src/components/dygma/atoms/: Accordion.tsx  Alert.tsx  (+28 more)
src/components/pages/: pageColors.tsx
src/components/ui/: accordion.tsx  alert-dialog.tsx  badge.tsx  button.tsx  checkbox.tsx  color-palette.tsx  color-picker.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  form.tsx  hover-card.tsx  input.tsx  navigation-menu.tsx  popover.tsx  resizable.tsx  scroll-area.tsx  select.tsx  slider.tsx  switch.tsx  tabs.tsx  toggle-group.tsx  toggle.tsx  tooltip.tsx
src/pages/: PageSettings.tsx  pageColors.tsx  pagePreConnect.tsx
src/types/: colors.ts
src/types/ffi/: hardware.ts  settings.ts
src/utils/: colorConverters.ts  colorDarkerCalculation.ts  colorMatrixCalculation.ts  findLayerType.ts  findModifierType.ts  parseColor.ts  rgbwToRgb.ts  rust.ts
(+176 files in other folders)
